--- a/pom.xml
+++ b/pom.xml
@@ -71,7 +71,7 @@
 		<dependency>
 			<groupId>org.springframework.data</groupId>
 			<artifactId>spring-data-redis</artifactId>
-			<version>1.7.0.BUILD-SNAPSHOT</version>
+			<version>1.7.1.RELEASE</version>
 		</dependency>
 		<dependency>
 			<groupId>redis.clients</groupId>
